# trackerman

./: .env.dev.template  Cargo.toml  README.md
migrations/: 20250124024534_Initial_tables..down.sql  20250124024534_Initial_tables..up.sql
src/: domain_types.rs  logic.rs  main.rs
